# zhiyuan-website

./: .gitignore  README.md  docker-compose.yml  insert_posts.sql
.github/: FUNDING.yml
backend/: Dockerfile  apis.http  launch.py  mysql.conf  pyproject.toml
backend/app/: main.py
backend/app/database/: __init__.py
backend/app/database/migrations/: init_db.py
backend/app/models/: post.py
backend/app/routers/: api.py
frontend/: .eslintrc.js  .prettierignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  tsconfig.paths.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/ErrorBoundary/: ErrorBoundary.tsx
frontend/src/components/Layout/: Header.tsx  Layout.tsx
frontend/src/constants/: api.ts
frontend/src/pages/: Blog.tsx  BlogPost.tsx  Home.tsx
frontend/src/services/: postService.ts
frontend/src/types/: post.ts
